[tool.poetry]
name = "ampel"
version = "0.0.0"
description = "Capgemini Sustainability Hackaton"
authors = [
    "Nicklas Bekkevold <44287251+nicklasbekkevold@users.noreply.github.com>", 
]
license = "MIT"
readme = "README.md"
include = ["src/ampel/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
coverage = "^7.0.5"
mypy = "^0.991"
pytest = "^7.2.1"
ruff = "^0.0.225"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
